<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_back"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_into"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/tv_into"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_into"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_to_do_sign_in_or_into"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_into"
        android:hint="@string/wtite_your_email"
        android:background="@drawable/bg_edit_texts"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="38dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:hint="@string/enter_password"
        android:background="@drawable/bg_edit_texts"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_to_come_in"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/to_come_in"
        android:textSize="20sp"
        android:background="@drawable/bg_edit_texts"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/gray" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/btn_to_come_in"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        app:layout_constraintTop_toBottomOf="@id/btn_to_come_in"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>